# arena-simulation-setup

./: .gitignore  CMakeLists.txt  README.md  down_db_asset.sh  package.xml
configs/: advanced_configs.yaml  saftey_distance_parameter.yaml  saftey_distance_parameter_none.yaml
configs/costmaps/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
configs/mbf/: move_base_params.yaml
configs/pedsim/: empty.xml
dynamic_obstacles/person_two_legged/: model.sdf
entities/robots/: temp.py
gazebo_models/Ambulance2/: model.sdf
gazebo_models/BathroomSink/: model.sdf
gazebo_models/Cafe/: model.sdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
obstacles/: walker.model.yaml
pedsim/: actor_model.sdf
plugins/: draw_force_plugin.cc  foot_contact_plugin.cc
robot/go1/: go1.model.yaml  model_params.yaml  package.xml  robot_control.yaml
robot/go1/configs/costmaps/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
robot/go1/configs/mbf/: mpc_local_planner_params.yaml  teb_local_planner_params.yaml
robot/go1/costmaps/: global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
robot/go1/costmaps.old/: global_costmap_params.yaml  local_costmap_params.yaml
robot/go1/launch/: check_joint.rviz  control.launch  go1_rviz.launch
robot/go1/urdf/: depthCamera.xacro  gazebo.xacro  go1.urdf  go1.urdf.xacro  leg.xacro  lidar.xacro  ultraSound.xacro
robot/go1/xacro/: gazebo.xacro  robot.xacro  ultraSound.xacro
robot/go1/yaml/: go1.yaml
(+1461 files in other folders)
